--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
-baseURL: 'https://2022.ubucon.asia/'
+baseURL: 'https://2023.ubucon.asia/'
 languageCode: en-us
-title: UbuCon Asia 2022
+title: UbuCon Asia 2023
 theme: ubuconasia
 Paginate: 5
 buildFuture: true
@@ -10,14 +10,14 @@ defaultContentLanguage: en
 languages:
   ko:
     languageName: 한국어
-    title: 우부콘 아시아 2022
+    title: 우부콘 아시아 2023
     weight: 2
     params:
       descriptionOnHomepage: >-
-        한국에서 열리는 첫 오프라인 우분투 아시아 컨퍼런스.
-      description: 11월 26일 ~ 27일 | 서울 상암동 누리꿈스퀘어
-      period: 2022년 11월 26일 ~ 27일 | 서울 상암동 누리꿈스퀘어
-      venueName: 누리꿈스퀘어 3~4층
+        3번째 우부콘 아시아가 인도네시아 수라카르타에 위치한 UNS 의 Aula FKIP (Gedung F)에서 열립니다. 올해 행사는 LibreOffice Conf Asia 와 연합으로 개최됩니다.
+      description: 10월 7~8일 | 인도네시아 수라카르타 UNS - Aula FKIP (Gedung F)
+      period: 2023년 10월 7~8일 | 인도네시아 수라카르타 UNS - Aula FKIP (Gedung F)
+      venueName: UNS - Aula FKIP (Gedung F)
     menu:
       main:
         - identifier: about
@@ -102,18 +102,18 @@ languages:
           weight: 50
         - identifier: wiki
           name: 위키
-          url: https://wiki.ubuntu.com/UbuconAsia/2022
+          url: https://wiki.ubuntu.com/UbuconAsia/2023
           weight: 60
   en:
     languageName: English
-    title: UbuCon Asia 2022
+    title: UbuCon Asia 2023
     weight: 1
     params:
       descriptionOnHomepage: >-
-        The first In-person Ubuntu Asia conference in South Korea.
+        The 3rd edition of UbuCon Asia will be held at FKIP UNS ins Surakarta, Indonesia. It will be also a joint event with LibreOffice Conf Asia
       description: November 26th ~ 27th | Nuritkum Square, Seoul, South Korea
-      period: November 26th ~ 27th, 2022 | Nuritkum Square, Seoul, South Korea
-      venueName: Nuritkum Square 3F~4F
+      period: November 26th ~ 27th, 2023 | Nuritkum Square, Seoul, South Korea
+      venueName: Aula FKIP (Gedung F), UNS
     menu:
       main:
         - identifier: about
@@ -198,18 +198,18 @@ languages:
           weight: 50
         - identifier: wiki
           name: Wiki
-          url: https://wiki.ubuntu.com/UbuconAsia/2022
+          url: https://wiki.ubuntu.com/UbuconAsia/2023
           weight: 60
   id:
     languageName: Bahasa Indonesia
-    title: UbuCon Asia 2022
+    title: UbuCon Asia 2023
     weight: 2
     params:
       descriptionOnHomepage: >-
-        The first In-person Ubuntu Asia conference in South Korea.
+        The 3rd edition of UbuCon Asia will be held at FKIP UNS ins Surakarta, Indonesia. It will be also a joint event with LibreOffice Conf Asia
       description: November 26th ~ 27th | Nuritkum Square, Seoul, South Korea
-      period: November 26th ~ 27th, 2022 | Nuritkum Square, Seoul, South Korea
-      venueName: Nuritkum Square 3F~4F
+      period: November 26th ~ 27th, 2023 | Nuritkum Square, Seoul, South Korea
+      venueName: Aula FKIP (Gedung F), UNS
     menu:
       main:
         - identifier: about
@@ -294,18 +294,18 @@ languages:
           weight: 50
         - identifier: wiki
           name: Wiki
-          url: https://wiki.ubuntu.com/UbuconAsia/2022
+          url: https://wiki.ubuntu.com/UbuconAsia/2023
           weight: 60
   ja:
     languageName: 日本語
-    title: UbuCon Asia 2022
+    title: UbuCon Asia 2023
     weight: 3
     params:
       descriptionOnHomepage: >-
-        The first In-person Ubuntu Asia conference in South Korea.
+        The 3rd edition of UbuCon Asia will be held at FKIP UNS ins Surakarta, Indonesia. It will be also a joint event with LibreOffice Conf Asia
       description: November 26th ~ 27th | Nuritkum Square, Seoul, South Korea
-      period: November 26th ~ 27th, 2022 | Nuritkum Square, Seoul, South Korea
-      venueName: Nuritkum Square 3F~4F
+      period: November 26th ~ 27th, 2023 | Nuritkum Square, Seoul, South Korea
+      venueName: Aula FKIP (Gedung F), UNS
     menu:
       main:
         - identifier: about
@@ -390,18 +390,18 @@ languages:
           weight: 50
         - identifier: wiki
           name: Wiki
-          url: https://wiki.ubuntu.com/UbuconAsia/2022
+          url: https://wiki.ubuntu.com/UbuconAsia/2023
           weight: 60
   zh-hant-tw:
     languageName: 正體中文(臺灣)
-    title: UbuCon Asia 2022
+    title: UbuCon Asia 2023
     weight: 2
     params:
       descriptionOnHomepage: >-
-        The first In-person Ubuntu Asia conference in South Korea.
+        The 3rd edition of UbuCon Asia will be held at FKIP UNS ins Surakarta, Indonesia. It will be also a joint event with LibreOffice Conf Asia
       description: November 26th ~ 27th | Nuritkum Square, Seoul, South Korea
-      period: November 26th ~ 27th, 2022 | Nuritkum Square, Seoul, South Korea
-      venueName: Nuritkum Square 3F~4F
+      period: November 26th ~ 27th, 2023 | Nuritkum Square, Seoul, South Korea
+      venueName: Aula FKIP (Gedung F), UNS
     menu:
       main:
         - identifier: about
@@ -486,18 +486,18 @@ languages:
           weight: 50
         - identifier: wiki
           name: Wiki
-          url: https://wiki.ubuntu.com/UbuconAsia/2022
+          url: https://wiki.ubuntu.com/UbuconAsia/2023
           weight: 60
   zh-hans-cn:
     languageName: 简体中文（中国大陆）
-    title: UbuCon Asia 2022
+    title: UbuCon Asia 2023
     weight: 3
     params:
       descriptionOnHomepage: >-
         首次在韩国举行的 Ubuntu 亚洲峰会。
       description: 11 月 26 至 27 日  | 韩国，首尔市，Nuritkum Square
-      period: 2022 年 11 月 26 至 27 日  | 韩国，首尔市，Nuritkum Square
-      venueName: Nuritkum Square 3F~4F
+      period: 2023 年 11 月 26 至 27 日  | 韩国，首尔市，Nuritkum Square
+      venueName: Aula FKIP (Gedung F), UNS
     menu:
       main:
         - identifier: about
@@ -582,21 +582,21 @@ languages:
           weight: 44
         - identifier: wiki
           name: Wiki
-          url: https://wiki.ubuntu.com/UbuconAsia/2022
+          url: https://wiki.ubuntu.com/UbuconAsia/2023
           weight: 50
 params:
   contact: contact@ubucon.asia
-  calendarOrganizer: UbuCon Asia 2022 Organizers
-  calendarUidSuffix: 2022.asia.ubucon.org
+  calendarOrganizer: UbuCon Asia 2023 Organizers
+  calendarUidSuffix: 2023.asia.ubucon.org
   facebook: ubuconasia
   twitter: ubuconasia
   github: ubucon-asia
   linkedin: ubucon-asia
   mastodon: https://mastodon.social/@UbuConAsia
-  repo: https://github.com/ubucon-asia/2022
+  repo: https://github.com/ubucon-asia/2023
   cloudflareAnalyticsToken: 25b3a95f0c9b46ebbe67afb9ea6006b2
   copyright:  >-
-    © 2022 UbuCon Asia 2022 Website authors.
+    © 2023 UbuCon Asia 2023 Website authors.
     Except where otherwise noted, Website source code licensed under MIT, Contents licensed under CC BY 4.0. 
     Ubuntu and Canonical are registered trademarks of Canonical Ltd.
   email: contact@ubucon.asia
@@ -604,8 +604,8 @@ params:
     attendee: https://eventyay.com/e/75ac7f83
     callForSpeakers: /cfs
   timetable:
-    dateStart: 2022-11-26T10:00:00+09:00
-    dateEnd: 2022-11-27T18:00:00+09:00
+    dateStart: 2023-11-26T10:00:00+09:00
+    dateEnd: 2023-11-27T18:00:00+09:00
     timeStart: 2000-01-01T09:00:00+09:00 # Use random date for timeStart param
   eventInfo:
     virtualLocationUrl: https://www.youtube.com/channel/UCdy5ggH4LKgUyr0WIH9DPwQ
