Update dates and venue meta

--- a/config.yaml
+++ b/config.yaml
@@ -111,8 +111,8 @@ languages:
     params:
       descriptionOnHomepage: >-
         The 3rd edition of UbuCon Asia will be held at FKIP UNS ins Surakarta, Indonesia. It will be also a joint event with LibreOffice Conf Asia
-      description: November 26th ~ 27th | Nuritkum Square, Seoul, South Korea
-      period: November 26th ~ 27th, 2023 | Nuritkum Square, Seoul, South Korea
+      description: October 7th ~ 8th | Aula FKIP (Gedung F), UNS, Surakarta, Indonesia
+      period: October 7th ~ 8th, 2023 | Aula FKIP (Gedung F), UNS, Surakarta, Indonesia
       venueName: Aula FKIP (Gedung F), UNS
     menu:
       main:
@@ -207,8 +207,8 @@ languages:
     params:
       descriptionOnHomepage: >-
         The 3rd edition of UbuCon Asia will be held at FKIP UNS ins Surakarta, Indonesia. It will be also a joint event with LibreOffice Conf Asia
-      description: November 26th ~ 27th | Nuritkum Square, Seoul, South Korea
-      period: November 26th ~ 27th, 2023 | Nuritkum Square, Seoul, South Korea
+      description: October 7th ~ 8th | Aula FKIP (Gedung F), UNS, Surakarta, Indonesia
+      period: October 7th ~ 8th, 2023 | Aula FKIP (Gedung F), UNS, Surakarta, Indonesia
       venueName: Aula FKIP (Gedung F), UNS
     menu:
       main:
@@ -303,8 +303,8 @@ languages:
     params:
       descriptionOnHomepage: >-
         The 3rd edition of UbuCon Asia will be held at FKIP UNS ins Surakarta, Indonesia. It will be also a joint event with LibreOffice Conf Asia
-      description: November 26th ~ 27th | Nuritkum Square, Seoul, South Korea
-      period: November 26th ~ 27th, 2023 | Nuritkum Square, Seoul, South Korea
+      description: October 7th ~ 8th | Aula FKIP (Gedung F), UNS, Surakarta, Indonesia
+      period: October 7th ~ 8th, 2023 | Aula FKIP (Gedung F), UNS, Surakarta, Indonesia
       venueName: Aula FKIP (Gedung F), UNS
     menu:
       main:
@@ -399,8 +399,8 @@ languages:
     params:
       descriptionOnHomepage: >-
         The 3rd edition of UbuCon Asia will be held at FKIP UNS ins Surakarta, Indonesia. It will be also a joint event with LibreOffice Conf Asia
-      description: November 26th ~ 27th | Nuritkum Square, Seoul, South Korea
-      period: November 26th ~ 27th, 2023 | Nuritkum Square, Seoul, South Korea
+      description: October 7th ~ 8th | Aula FKIP (Gedung F), UNS, Surakarta, Indonesia
+      period: October 7th ~ 8th, 2023 | Aula FKIP (Gedung F), UNS, Surakarta, Indonesia
       venueName: Aula FKIP (Gedung F), UNS
     menu:
       main:
