--- a/config.yaml
+++ b/config.yaml
@@ -60,23 +60,8 @@ languages:
           weight: 26
         - identifier: programs-group
           name: 프로그램
-          url: programs
+          url: https://events.canonical.com/event/13/abstracts/
           weight: 30
-        - identifier: call-for-proposals
-          parent: programs-group
-          name: 발표 제안
-          url: call-for-proposals
-          weight: 31
-        - identifier: sessions
-          parent: programs-group
-          name: 세션
-          url: sessions
-          weight: 32
-        - identifier: social-events
-          parent: programs-group
-          name: 부대행사
-          url: social-events
-          weight: 33
         - identifier: sponsors-group
           name: 후원사/개인후원
           url: sponsors
@@ -156,23 +141,8 @@ languages:
           weight: 26
         - identifier: programs-group
           name: Programs
-          url: programs
+          url: https://events.canonical.com/event/13/abstracts/
           weight: 30
-        - identifier: call-for-proposals
-          parent: programs-group
-          name: Call for proposals
-          url: call-for-proposals
-          weight: 31
-        - identifier: sessions
-          parent: programs-group
-          name: Sessions
-          url: sessions
-          weight: 32
-        - identifier: social-events
-          parent: programs-group
-          name: Social events
-          url: social-events
-          weight: 33
         - identifier: sponsors-group
           name: Sponsors/Patrons
           url: sponsors
@@ -252,23 +222,8 @@ languages:
           weight: 26
         - identifier: programs-group
           name: Program
-          url: programs
+          url: https://events.canonical.com/event/13/abstracts/
           weight: 30
-        - identifier: call-for-proposals
-          parent: programs-group
-          name: Call for proposals
-          url: call-for-proposals
-          weight: 31
-        - identifier: sessions
-          parent: programs-group
-          name: Sesi
-          url: sessions
-          weight: 32
-        - identifier: social-events
-          parent: programs-group
-          name: Social events
-          url: social-events
-          weight: 33
         - identifier: sponsors-group
           name: Sponsor/Patron
           url: sponsors
@@ -348,23 +303,8 @@ languages:
           weight: 26
         - identifier: programs-group
           name: Programs
-          url: programs
+          url: https://events.canonical.com/event/13/abstracts/
           weight: 30
-        - identifier: call-for-proposals
-          parent: programs-group
-          name: Call for proposals
-          url: call-for-proposals
-          weight: 31
-        - identifier: sessions
-          parent: programs-group
-          name: セッション
-          url: sessions
-          weight: 32
-        - identifier: social-events
-          parent: programs-group
-          name: Social events
-          url: social-events
-          weight: 33
         - identifier: sponsors-group
           name: スポンサー/Patrons
           url: sponsors
@@ -444,23 +384,8 @@ languages:
           weight: 26
         - identifier: programs-group
           name: Programs
-          url: programs
+          url: https://events.canonical.com/event/13/abstracts/
           weight: 30
-        - identifier: call-for-proposals
-          parent: programs-group
-          name: Call for proposals
-          url: call-for-proposals
-          weight: 31
-        - identifier: sessions
-          parent: programs-group
-          name: Sessions
-          url: sessions
-          weight: 32
-        - identifier: social-events
-          parent: programs-group
-          name: Social events
-          url: social-events
-          weight: 33
         - identifier: sponsors-group
           name: Sponsors/Patrons
           url: sponsors
@@ -540,23 +465,8 @@ languages:
           weight: 26
         - identifier: programs-group
           name: 会议
-          url: programs
+          url: https://events.canonical.com/event/13/abstracts/
           weight: 30
-        - identifier: call-for-proposals
-          parent: programs-group
-          name: Call for proposals
-          url: call-for-proposals
-          weight: 31
-        - identifier: sessions
-          parent: programs-group
-          name: 会议流程
-          url: sessions
-          weight: 32
-        - identifier: social-events
-          parent: programs-group
-          name: Social events
-          url: social-events
-          weight: 33
         - identifier: sponsors-group
           name: 赞助商
           url: sponsors
